fixed blurred opacity

--- a/utleie.css
+++ b/utleie.css
@@ -15,7 +15,7 @@ html, body {
     z-index: 2;
     height: 100%;
     width: 100%;
-    background: #7c7c8160;
+    background: #7c7c8138;
     display: none;
 }
 
